Adding more granular http errors and return codes
